ci: remove multi driver build for release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           build-args: |
             RELEASE_NUMBER=${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
           tags: |
