--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,4 +1,4 @@
-name: Vercel Preview Deployment
+name: Preview Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
@@ -8,6 +8,7 @@ on:
       - main
 jobs:
   Deploy-Preview:
+    name: Deploy Preview
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
