--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,11 @@
-name: Release Docker app
+name: Production Release
 on:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
 jobs:
-  release-app:
-    name: Release app
+  Release-Production:
+    name: Release Production
     runs-on: ubuntu-latest
     permissions:
       contents: read
