--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,3 +38,15 @@ jobs:
           tags: |
             ${{ vars.IMAGE_NAME }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
             ${{ vars.IMAGE_NAME }}:latest
+
+      - name: Set new Preview Release number
+        uses: dkershner6/vercel-set-env-action@v3
+        with:
+          token: ${{ secrets.VERCEL_TOKEN }}
+          teamId: ${{ secrets.VERCEL_ORG_ID }}
+          projectName: ${{ secrets.VERCEL_PROJECT_NAME }}
+          envVariableKeys: RELEASE_NUMBER
+        env:
+          RELEASE_NUMBER: ${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
+          TARGET_RELEASE_NUMBER: production # comma delimited, one of [production, preview, development]
+          TYPE_RELEASE_NUMBER: plain # one of [plain, encrypted]
