--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -6,8 +6,11 @@ on:
   push:
     branches:
       - main
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
+  # also run after production release to use the correct `RELEASE_NUMBER`
+  workflow_run:
+    workflows: ["Production Release"]
+    types:
+      - completed
 jobs:
   Deploy-Preview:
     name: Deploy Preview
