--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -3,14 +3,15 @@ env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
-  push:
-    branches:
-      - main
-  # also run after production release to use the correct `RELEASE_NUMBER`
-  workflow_run:
-    workflows: ["Production Release"]
-    types:
-      - completed
+  # push:
+  #   branches:
+  #     - main
+  # # also run after production release to use the correct `RELEASE_NUMBER`
+  # workflow_run:
+  #   workflows: ["Production Release"]
+  #   types:
+  #     - completed
+  workflow_dispatch:
 jobs:
   Deploy-Preview:
     name: Deploy Preview
