--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Production Release
 on:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
+  # push:
+  #   tags:
+  #     - "v[0-9]+.[0-9]+.[0-9]+*"
+  workflow_dispatch:
 jobs:
   Release-Production:
     name: Release Production
