--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   Create-Release:
     name: Create Release
+  Create-Release:
+    name: Create Release
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -44,4 +46,25 @@ jobs:
             ```
 
             # 📝 **Changelog**
+            ${{ steps.changelog.outputs.changelog }}
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
+          name: Release ${{ steps.changelog.outputs.release-id }}
+          body: |
+            ## 📦 Release `${{ steps.get_release_number.outputs.RELEASE_NUMBER }}`
+
+            🔖 **Tag:** [${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](https://github.com/${{ github.repository }}/tree/${{ steps.get_release_number.outputs.RELEASE_NUMBER }})
+
+            🐳 **Docker Image:**  
+            `ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}`
+
+            ▶️ **Pull the image:**
+            ```bash
+            docker pull ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
+            ```
+
+            📝 **Changelog:**
             ${{ steps.changelog.outputs.changelog }}
