--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -4,8 +4,8 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
 jobs:
-  Create-Changelog:
-    name: Create Changelog
+  Create-Release:
+    name: Create Release
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -23,3 +23,24 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           default-commit-type: Other Changes
           release-name: ${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
+          name: Release ${{ steps.changelog.outputs.release-id }}
+          body: |
+            ## 📦 Release `${{ steps.get_release_number.outputs.RELEASE_NUMBER }}`
+
+            🔖 **Tag:** [${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](https://github.com/${{ github.repository }}/tree/${{ steps.get_release_number.outputs.RELEASE_NUMBER }})
+
+            🐳 **Docker Image:**  
+            `ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}`
+
+            ▶️ **Pull the image:**
+            ```bash
+            docker pull ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
+            ```
+
+            📝 **Changelog:**
+            ${{ steps.changelog.outputs.changelog }}
