--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -54,18 +54,17 @@ jobs:
           tag_name: ${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
           name: ${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
           body: |
-            🔖 **Based on Tag:** [${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](https://github.com/${{ github.repository }}/tree/${{ steps.get_release_number.outputs.RELEASE_NUMBER }})
+            # 🚀 Release Notes
 
             🔖 **Tag:** [${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](https://github.com/${{ github.repository }}/tree/${{ steps.get_release_number.outputs.RELEASE_NUMBER }})
 
-            🐳 **Docker Image:** [${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](https://ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }})
-            ```bash
-            # get latest image
-            docker pull ghcr.io/${{ github.repository }}:latest
+            🐳 **Docker Image:**  
+            `ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}`
 
-            # get this specific image
+            ▶️ **Pull the image:**
+            ```bash
             docker pull ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
             ```
 
-            # 📝 **Changelog**
+            📝 **Changelog:**
             ${{ steps.changelog.outputs.changelog }}
