--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -56,16 +56,16 @@ jobs:
           body: |
             🔖 **Based on Tag:** [${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](https://github.com/${{ github.repository }}/tree/${{ steps.get_release_number.outputs.RELEASE_NUMBER }})
 
-            🐳 **Docker Image:** [${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](`ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}`)
+            🔖 **Tag:** [${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](https://github.com/${{ github.repository }}/tree/${{ steps.get_release_number.outputs.RELEASE_NUMBER }})
 
-            ▶️ **Pull instructions:**
+            🐳 **Docker Image:** [${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}](https://ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }})
             ```bash
-            # latest image
+            # get latest image
             docker pull ghcr.io/${{ github.repository }}:latest
 
-            # this specific image
+            # get this specific image
             docker pull ghcr.io/${{ github.repository }}:${{ steps.get_release_number.outputs.RELEASE_NUMBER }}
             ```
 
-            ## 📝 **Changelog:**
+            # 📝 **Changelog**
             ${{ steps.changelog.outputs.changelog }}
