--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -4,8 +4,10 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
 jobs:
-  Create-Changelog:
-    name: Create Changelog
+  Create-Release:
+    name: Create Release
+  Create-Release:
+    name: Create Release
     runs-on: ubuntu-latest
     permissions:
       contents: write
