--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
 name: Production Release
 on:
-  # push:
-  #   tags:
-  #     - "v[0-9]+.[0-9]+.[0-9]+*"
-  workflow_dispatch:
+  push:
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+*"
 jobs:
   Release-Production:
     name: Release Production
