--- a/.prettierrc
+++ b/.prettierrc
@@ -18,7 +18,7 @@
     "singleQuote": false,
     "tabWidth": 4,
     "trailingComma": "all",
-    "singleAttributePerLine": false,
+    "singleAttributePerLine": true,
     "useTabs": false,
     "plugins": ["prettier-plugin-tailwindcss"],
     "overrides": [
