--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,15 +6,18 @@ updates:
       interval: "weekly"
       day: "friday"
       time: "00:00"
+    open-pull-requests-limit: 20
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
       day: "friday"
       time: "00:00"
+    open-pull-requests-limit: 20
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
       day: "friday"
       time: "00:00"
+    open-pull-requests-limit: 20
