chore: update prettier config

--- a/.prettierrc
+++ b/.prettierrc
@@ -23,7 +23,7 @@
     "plugins": ["prettier-plugin-tailwindcss"],
     "overrides": [
         {
-            "files": ["*.yaml", "*.yml"],
+            "files": ["*.yaml", "*.yml", "package*.json"],
             "options": {
                 "tabWidth": 2
             }
