--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.7",
     "react": "19.1.1",
