--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "postgres": "^3.4.7",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-safe-area": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
