--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,8 @@
 name: Production Release
 on:
   push:
+    branches:
+      - main
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
 jobs:
@@ -16,9 +18,6 @@ jobs:
         id: release
         run: echo "release-name=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
 
-      - name: Install Dependencies
-        run: sudo apt update && sudo apt install -y jq
-
       - name: Checkout source code
         uses: actions/checkout@v4
 
@@ -33,7 +32,7 @@ jobs:
           git config user.email ${{ vars.GH_ACTION_USER_EMAIL }}
           git add package.json
           git commit -m "chore(release): set package.json version to ${{ steps.release.outputs.release-name }}"
-          git push
+          git push origin HEAD:main
 
       - name: Log In to GitHub Container Registry
         uses: docker/login-action@v3
