--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,11 +26,16 @@ jobs:
 
       - name: Commit Updated package.json
         run: |
-          git config user.name ${{ vars.GH_ACTION_USER_NAME }}
-          git config user.email ${{ vars.GH_ACTION_USER_EMAIL }}
+          git config user.name "${{ vars.GH_ACTION_USER_NAME }}"
+          git config user.email "${{ vars.GH_ACTION_USER_EMAIL }}"
           git add package.json
-          git commit -m "chore(release): set package.json version to ${{ steps.release.outputs.release-name }}"
-          git push origin HEAD:main
+
+          if git diff --cached --quiet; then
+            echo "Skipping commit: package.json already at version ${{ steps.release.outputs.release-name }}"
+          else
+            git commit -m "chore(release): set package.json version to ${{ steps.release.outputs.release-name }}"
+            git push origin HEAD:main
+          fi
 
       - name: Log In to GitHub Container Registry
         uses: docker/login-action@v3
