build: update release pipeline, update release script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,30 +12,8 @@ jobs:
       packages: write
 
     steps:
-      - name: Get Release Name
-        id: release
-        run: echo "release-name=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-
       - name: Checkout source code
         uses: actions/checkout@v5
-
-      - name: Set package.json Version
-        run: |
-          echo "Setting version to ${{ steps.release.outputs.release-name }}"
-          jq --arg v "${{ steps.release.outputs.release-name }}" '.version = $v' package.json > tmp.package.json && mv tmp.package.json package.json
-
-      - name: Commit Updated package.json
-        run: |
-          git config user.name "${{ vars.GH_ACTION_USER_NAME }}"
-          git config user.email "${{ vars.GH_ACTION_USER_EMAIL }}"
-          git add package.json
-
-          if git diff --cached --quiet; then
-            echo "Skipping commit: package.json already at version ${{ steps.release.outputs.release-name }}"
-          else
-            git commit -m "chore(release): set package.json version to ${{ steps.release.outputs.release-name }}"
-            git push origin HEAD:main
-          fi
 
       - name: Log In to GitHub Container Registry
         uses: docker/login-action@v3
@@ -52,7 +30,7 @@ jobs:
           push: true
           platforms: linux/amd64
           tags: |
-            ${{ vars.DOCKER_PRODUCTION_IMAGE_NAME }}:${{ steps.release.outputs.release-name }}
+            ${{ vars.DOCKER_PRODUCTION_IMAGE_NAME }}:${{ github.ref_name }}
             ${{ vars.DOCKER_PRODUCTION_IMAGE_NAME }}:latest
 
       - name: Set New Preview Release Name
@@ -63,7 +41,7 @@ jobs:
           projectName: ${{ secrets.VERCEL_PROJECT_NAME }}
           envVariableKeys: RELEASE_NAME
         env:
-          RELEASE_NAME: ${{ steps.release.outputs.release-name }}
+          RELEASE_NAME: ${{ github.ref_name }}
           TARGET_RELEASE_NAME: production # comma delimited, one of [production, preview, development]
           TYPE_RELEASE_NAME: plain # one of [plain, encrypted]
 
@@ -73,12 +51,12 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           default-commit-type: Other Changes
-          release-name: ${{ steps.release.outputs.release-name }}
+          release-name: ${{ github.ref_name }}
 
       - name: Determine Prerelease Flag
         id: prerelease
         run: |
-          if [[ ${{ steps.release.outputs.release-name }} =~ (alpha|beta|rc|next|canary) ]]; then
+          if [[ ${{ github.ref_name }} =~ (alpha|beta|rc|next|canary) ]]; then
             echo "is-prerelease=true" >> $GITHUB_OUTPUT
           else
             echo "is-prerelease=false" >> $GITHUB_OUTPUT
@@ -87,21 +65,21 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ steps.release.outputs.release-name }}
-          name: ${{ steps.release.outputs.release-name }}
+          tag_name: ${{ github.ref_name }}
+          name: ${{ github.ref_name }}
           prerelease: ${{ steps.prerelease.outputs.is-prerelease }}
           body: |
             # 🚀 Release Notes
 
-            🔖 **Tag:** [${{ steps.release.outputs.release-name }}](https://github.com/${{ github.repository }}/tree/${{ steps.release.outputs.release-name }})
+            🔖 **Tag:** [${{ github.ref_name }}](https://github.com/${{ github.repository }}/tree/${{ github.ref_name }})
 
-            🐳 **Docker Image:** [${{ github.repository }}:${{ steps.release.outputs.release-name }}](https://ghcr.io/${{ github.repository }}:${{ steps.release.outputs.release-name }})
+            🐳 **Docker Image:** [${{ github.repository }}:${{ github.ref_name }}](https://ghcr.io/${{ github.repository }}:${{ github.ref_name }})
             ```bash
             # get latest image
             docker pull ghcr.io/${{ github.repository }}:latest
 
             # get this specific image
-            docker pull ghcr.io/${{ github.repository }}:${{ steps.release.outputs.release-name }}
+            docker pull ghcr.io/${{ github.repository }}:${{ github.ref_name }}
             ```
 
             # 📝 Changelog
