--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -16,32 +16,56 @@ on:
       - "prettierrc"
       - "eslint.config.*"
       - "LICENSE*"
-  # also run after production release to use the correct `RELEASE_NAME`
+      - ".yarnrc.yml"
+  pull_request:
+    branches:
+      - main
   workflow_run:
-    workflows: ["Production Release"]
+    workflows: ["Production Release"] # also run after production release to use the correct `RELEASE_NAME`
     types:
       - completed
 jobs:
-  Deploy-Preview:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Enable Corepack
+        run: corepack enable
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          cache: "yarn"
+      - name: Disable Telemetry
+        run: npx next telemetry disable
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+      - name: Test Build
+        run: npm run build
+  deploy:
     name: Deploy Preview
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v5
-
+      - name: Enable Corepack
+        run: corepack enable
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          cache: "yarn"
       - name: Install Vercel CLI
-        run: npm install --global vercel@latest
-
+        run: yarn global add vercel@latest
       - name: Disable Telemetry
         run: |
           vercel telemetry disable
           npx next telemetry disable
-
       - name: Pull Vercel Environment Information
         run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
-
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
