--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,26 +2,45 @@ name: Production Release
 on:
   push:
     tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
+      - "v[0-9]+.[0-9]+.[0-9]+"                  # v1.0.0
+      - "v[0-9]+.[0-9]+.[0-9]+-[A-Za-z]+.[0-9]+" # v1.0.0-alpha.1
+
 jobs:
-  Release-Production:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Enable Corepack
+        run: corepack enable
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          cache: "yarn"
+      - name: Disable Telemetry
+        run: npx next telemetry disable
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+      - name: Test Build
+        run: yarn build
+
+  release:
     name: Release Production
     runs-on: ubuntu-latest
     permissions:
       contents: write
       packages: write
-
     steps:
       - name: Checkout source code
         uses: actions/checkout@v5
-
       - name: Log In to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
@@ -32,7 +51,6 @@ jobs:
           tags: |
             ${{ vars.DOCKER_PRODUCTION_IMAGE_NAME }}:${{ github.ref_name }}
             ${{ vars.DOCKER_PRODUCTION_IMAGE_NAME }}:latest
-
       - name: Set New Preview Release Name
         uses: dkershner6/vercel-set-env-action@v3
         with:
@@ -44,7 +62,6 @@ jobs:
           RELEASE_NAME: ${{ github.ref_name }}
           TARGET_RELEASE_NAME: production # comma delimited, one of [production, preview, development]
           TYPE_RELEASE_NAME: plain # one of [plain, encrypted]
-
       - name: Generate Changelog
         id: changelog
         uses: ardalanamini/auto-changelog@v4
@@ -52,7 +69,6 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           default-commit-type: Other Changes
           release-name: ${{ github.ref_name }}
-
       - name: Determine Prerelease Flag
         id: prerelease
         run: |
@@ -61,7 +77,6 @@ jobs:
           else
             echo "is-prerelease=false" >> $GITHUB_OUTPUT
           fi
-
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
