--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5.9.2"
-}
+  },
+  "packageManager": "yarn@4.9.4"
 }
