--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -93,7 +93,7 @@ jobs:
         run: yarn install --immutable
 
       - name: Install Vercel CLI
-        run: yarn global add vercel@latest
+        run: yarn add vercel@latest
 
       - name: Restore Next.js Build Cache
         uses: actions/cache@v4
