--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vercel": "^46.1.1"
   },
   "packageManager": "yarn@4.9.4"
 }
