--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,7 @@
+# docker
+Dockerfile
+.dockerignore
+
 # dependencies
 node_modules
 
@@ -19,3 +23,10 @@ next.env.d.ts
 
 # vscode
 .vscode
+
+# packages
+.yarn
+
+# project-specific assets
+README.md
+scripts
