--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "emu": "AUTH_URL=http://192.168.1.200:3000 next dev --turbopack --hostname 0.0.0.0 --port 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
