--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -18,20 +18,6 @@ on:
       - "eslint.config.*"
       - "LICENSE*"
       - ".yarnrc.yml"
-  pull_request:
-    branches:
-      - main
-    paths-ignore:
-      - ".github/**"
-      - "scripts/**"
-      - "**/*.md"
-      - "Dockerfile"
-      - ".dockerignore"
-      - ".gitignore"
-      - "prettierrc"
-      - "eslint.config.*"
-      - "LICENSE*"
-      - ".yarnrc.yml"
   workflow_run:
     workflows: ["Production Release"] # also run after production release to use the correct `RELEASE_NAME`
     types:
@@ -40,45 +26,13 @@ on:
 jobs:
   test:
     name: Test
-    permissions:
-      contents: read
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 24
-          cache: "yarn"
-
-      - name: Disable Telemetry
-        run: npx next telemetry disable
-
-      - name: Install Dependencies
-        run: yarn install --immutable
-
-      - name: Cache Next.js Build Output
-        uses: actions/cache@v4
-        with:
-          path: .next/cache
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-${{ hashFiles('**/*.[jt]s', '**/*.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('**/yarn.lock') }}-
-
-      - name: Test Build
-        run: yarn build
+    uses: ./.github/workflows/test.yml
 
   deploy:
     name: Deploy Preview
     runs-on: ubuntu-latest
     permissions:
       contents: read
-    needs: test
     steps:
       - name: Checkout source code
         uses: actions/checkout@v5
