--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   test:
     name: Test
-    permissions: {}
+    permissions:
+      contents: read
     uses: ./.github/workflows/test.yml
 
   release:
