--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "emu": "AUTH_URL=http://192.168.1.200:3000 next dev --turbopack --hostname 0.0.0.0 --port 3000",
-    "build": "next build",
+    "build": "eslint . && next build",
     "start": "next start",
     "lint": "eslint ."
   },
