--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^24.10.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.1",
     "prettier": "^3.6.2",
